# sim-base

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.h  HyperelasticMaterial.h  Math.h  README.md  SNH.h  STVK.h  Settings.h  TetMesh.cc  TetMesh.h  Timestepper.cc  Timestepper.h  main.cc
Lib/: BackwardEuler.h  CMakeLists.txt  Camera.h  ForwardEuler.h  ForwardEulerStrand.h  ForwardEulerVolume.h  HyperelasticMaterial.h  IO.cc  IO.h  LibGui.cc  LibGui.h  LibMath.h  Material.cc  SNH.h  STVK.h  Settings.h  StrandMesh.cc  StrandMesh.h  TetMesh.cc  TetMesh.h  Timestepper.h  TimestepperStrand.h  TimestepperVolume.h
Lib/Collision/: CollisionMesh.cc  CollisionMesh.h
Lib/Energy/: HyperelasticMaterial.h
Lib/Energy/Collision/: EdgeCollision.cc  EdgeCollision.h  VertexFaceSqrtCollision.cc  VertexFaceSqrtCollision.h
Lib/Energy/Spring/: MassSpring.cc  MassSpring.h
Lib/Energy/Strand/: AdaptedFrame.cc  AdaptedFrame.h  DerBending.cc  DerBending.h  DiscreteElasticRod.cc  DiscreteElasticRod.h  StrandMaterial.cc  StrandMaterial.h
Lib/Energy/Volume/: HyperelasticMaterial.h  SNH.cc  SNH.h  STVK.cc  STVK.h
Lib/Integrator/: BackwardEulerVolume.h  ForwardEulerStrand.h  ForwardEulerVolume.h  StrandIntegrator.h  VolumeIntegrator.h
Lib/Scenes/: StrandDropScene.cc  StrandDropScene.h  StrandScene.cc  StrandScene.h  StrandTwist.cc  StrandTwist.h  VolumeScene.cc  VolumeScene.h
Prototyping/: requirements.txt  tridiagonal.py
Scenes/: BunnyDropExplicit.cc  FrameDebug.cc  StrandBendExplicit.cc  StrandDropExplicit.cc  StrandTwistExplicit.cc
Scripts/: mitsuba.py  mitsuba_bend.py  mitsuba_twist.py  pbrt.py  requirements.txt  scene.xml
Tests/: CMakeLists.txt  TestLibMath.cc  TestSNH.cc  TestTetMesh.cc
